--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,24 +5,24 @@ services:
     restart: always
     image: postgres:alpine
 ### Uncomment to enable DB persistance
-#    volumes:
-#      - ./postgres:/var/lib/postgresql/data
+    volumes:
+      - ./postgres:/var/lib/postgresql/data
 
   redis:
     restart: always
     image: redis:alpine
 ### Uncomment to enable REDIS persistance
-#    volumes:
-#      - ./redis:/data
+    volumes:
+      - ./redis:/data
 
   web:
     restart: always
     build: .
     image: gargron/mastodon
     env_file: .env.production
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    command: bundle exec rails s -p 3168 -b '0.0.0.0'
     ports:
-      - "3000:3000"
+      - "3168:3168"
     depends_on:
       - db
       - redis
